# github-copilot-usage-dashboard

./: .checkov.yml  .dockerignore  .gitignore  .mega-linter.yml  .trivyignore  404.html  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  catalog-info.yaml  index.html  kics.config  mkdocs.yml  publish_container.sh  pyproject.toml  set_aws_env.sh  start_dashboard.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  deploy_mkdocs.yml  megalinter.yml  update_mkdocs.yml
.streamlit/: config.toml
aws_lambda_scripts/: Dockerfile  README.md  api_interface.py  main.py  requirements.txt  run_script.sh  team.py
aws_lambda_scripts/diagrams/: aws-lambda-script-data-model.drawio
concourse/: ci.yml
concourse/scripts/: assume_role.sh  build_image.sh  set_pipeline.sh  terraform_infra.sh
config/: config.json
diagrams/: architecture.drawio  copilot-usage-dashboard-data-model.drawio
docs/: adr.md  documentation.md  index.md  readme.md  team_usage.md
documentation/: index.html
lambda_data_logger/: .dockerignore  Dockerfile  README.md  main.py  requirements.txt
mkdocs_deployment/: 404.html  index.html
mkdocs_deployment/documentation/: index.html
mkdocs_deployment/search/: search_index.json
search/: search_index.json
shell_scripts/: md_fix.sh  md_lint.sh  publish_container.sh  set_aws_env.sh
src/: api_interface.py  app.py  auth.py  main.py
src/example_data/: team_copilot_usage_data.json
src/pages/: interim_page.py  org_usage.py  team_usage.py
team_usage/: index.html
terraform/: data.tf  eventbridge.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/dashboard/: README.md  main.tf  providers.tf  (+1 more)
tests/: test_main.py
(+19 files in other folders)
