[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kieran Pritchard <kieran.pritchard@ons.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.34.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
jwt = "^1.3.1"
boto3 = "^1.34.123"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.29"
github-api-toolkit = {git = "https://github.com/ONS-Innovation/github-api-package.git", rev = "v1.0.0"}

[tool.poetry.dev.dependencies]
black = "^24.8.0"
ruff = "^0.6.5"
pylint = "^3.2.7"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
